# Formation_VIGICLIMM

./: 01 - Python_basics(1).ipynb  02 - Numpy(1).ipynb  LIEN FORMATION A SUIVRE VIGICLIMM.txt  Presentation_formation_indicateurs.pptx  Training_CIPS-LAB_anglais.pptx  conda.env.yml  conda_setup.txt  run_locally.ipynb  stations_list.yaml  test1.py  test_formation_VIGI (1).ipynb  test_formation_VIGI.ipynb
DEV_APPLI/APPLI_RIZCOOP/: 20250318_VIGICLIMM_VALID_APP Agro V02 JMT.docx  fiche_suivi_V2.docx  (+3 more)
vigiclimm-indicators-main/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
vigiclimm-indicators-main/deploy/cipstc/mfi/: compute.sh  gfs_to_nc.yml  project.yml  send_data.sh
vigiclimm-indicators-main/deploy/cipstc/vigiclimm/: compute.sh  conda.yml  fetch.sh  mfi_ci_fixture.sh  project.yml  send_data.sh
vigiclimm-indicators-main/docs/source/: conf.py  index.rst  modules.rst  vigiclimm_indicators.agro_indicators.rst  vigiclimm_indicators.rst  vigiclimm_indicators.weather_indicators.rst
vigiclimm-indicators-main/tests/: test_agro_indicators.py  test_degree_days.py  test_disease.py  test_etp.py  test_extreme_events.py
vigiclimm-indicators-main/tests/data/: README.md  degree_day.csv  degree_day.nc  station_list.yaml
vigiclimm-indicators-main/vigiclimm_indicators/agro_indicators/: agro_indicators.py  disease.py  generate_agro_indicators.py
vigiclimm-indicators-main/vigiclimm_indicators/weather_indicators/: daily_forecast.py  degree_days.py  etp.py  extreme_events.py  historical.py  preprocess.py  thermodynamics.py  utils.py  wind.py
(+5 files in other folders)
